--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,22 @@
-version: '3.8'  # Docker Compose file version
-
 services:
-  openWebUI3:
+  openWebUI:
     image: ghcr.io/open-webui/open-webui:cuda
     restart: always
     ports:
-      - "3000:8080"
+      - "${PORT_WEBUI}:8080"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
       - ./volumes/webui:/app/backend/data
     container_name: gpt.webui
-    deploy:
-      resources:
-        reservations:
-          devices:
-          - driver: nvidia
-            capabilities: [gpu]
-            count: all
-
-  ollama:
-    image: ollama/ollama:latest
-    ports:
-      - "11434:11434"
-    volumes:
-      - ./volumes/ollama:/root/.ollama
-    restart: always
-    container_name: gpt.ollama
-    deploy:
-      resources:
-        reservations:
-          devices:
-          - driver: nvidia
-            capabilities: [gpu]
-            count: all
-
+    
+  ### 파이프라인 ###
   pipelines:
     image: ghcr.io/open-webui/pipelines:main
     container_name: gpt.pipelines
     restart: always
     ports:
-      - "9099:9099"
+      - "${PORT_PIPLINE}:9099"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
